refactor: adicionando os logs do usuário
