# src/main/configs/static/swagger.json
@@ -22,6 +22,10 @@
         {
             "name": "Weather Data API",
             "description": "api para buscar a previsão de 4 dias de uma específica"
+        },
+        {
+            "name": "Logs Data API",
+            "description": "api para buscar os logs dos usuários"
         }
     ],
     "servers": [
@@ -113,6 +117,29 @@
                         "type": "string"
                     },
                     "uf": {
+                        "type": "string"
+                    }
+                }
+            },
+            "logSchema": {
+                "type": "object",
+                "properties": {
+                    "date": {
+                        "type": "date"
+                    },
+                    "level": {
+                        "type": "int"
+                    },
+                    "logger": {
+                        "type": "string"
+                    },
+                    "message": {
+                        "type": "string"
+                    },
+                    "method": {
+                        "type": "string"
+                    },
+                    "url": {
                         "type": "string"
                     }
                 }
@@ -265,6 +292,31 @@
                         "description": "UNAUTHORIZED",
                         "schema": {
                             "$ref": "#/components/schemas/errorSchema"
+                        }
+                    },
+                    "500": {
+                        "description": "SERVER ERROR",
+                        "schema": {
+                            "$ref": "#/components/schemas/errorSchema"
+                        }
+                    }
+                }
+            }
+        },
+        "/logs": {
+            "get": {
+                "tags": [
+                    "Logs Data API"
+                ],
+                "summary": "para buscar os logs do sistema",
+                "security": [
+                    {"apiKeyAuth": []
+                }],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/components/schemas/logSchema"
                         }
                     },
                     "500": {
